--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "image": "heroku/python",
   "repository": "https://github.com/heroku/python-getting-started",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
+  "addons": [],
   "env": {
     "SECRET_KEY": {
       "description": "The secret key for the Django application.",
@@ -14,8 +14,8 @@
   "environments": {
     "test": {
       "scripts": {
-        "test-setup": "python manage.py collectstatic --noinput",
-        "test": "python manage.py test"
+        "test-setup": "python bot.py",
+        "test": "python bot.py"
       }
     }
   }
